noticed span was off center when loaded onto browser. fixed left-padding

--- a/assets/date.css
+++ b/assets/date.css
@@ -173,7 +173,7 @@ footer {
 .rating {
     unicode-bidi: bidi-override;
     direction: rtl;
-    padding-left: 55px;
+    padding-left: 85px;
     font-size: 20px;
 }
 
